# Norka

./: .gitignore  .travis.yml  COPYING  LICENSE  README.md  com.github.tender-owl.norka.json  com.github.tenderowl.norka.json  com.tenderowl.norka.json  meson.build  setup.py  snapcraft.yaml
.github/workflows/: main.yml
build-aux/: elementary-theme.patch
data/: application.css  com.github.tender-owl.norka.appdata.xml.in  com.github.tender-owl.norka.desktop.in  com.github.tender-owl.norka.gschema.xml  com.github.tenderowl.norka.appdata.xml  com.github.tenderowl.norka.appdata.xml.in  com.github.tenderowl.norka.desktop  com.github.tenderowl.norka.desktop.in  com.github.tenderowl.norka.desktop.in.in  com.github.tenderowl.norka.gresource.xml  com.github.tenderowl.norka.gschema.xml  com.tenderowl.norka.appdata.xml.in  com.tenderowl.norka.desktop.in.in  com.tenderowl.norka.gresource.xml  com.tenderowl.norka.gschema.xml  meson.build
data/css/: application.css
data/icons/: meson.build
data/schemes/: norka-dark.xml  norka-sepia.xml  norka.xml
data/ui/: app_menu.xml  content_page.blp  document_grid_document_menu.blp  document_grid_folder_menu.blp  documents_grid.blp  documents_grid_context_menu.blp  documents_grid_context_menu.ui  editor.blp  editor_column.blp  editor_tabs_view.blp  editor_view.blp  format_shortcuts_window.blp  format_shortcuts_window.ui  headerbar.blp  headerbar.ui  main_window.blp  main_window.ui  menu_export.blp  menu_popover.blp  notes_column.blp  notes_list.blp  notes_sidebar.blp  notes_tree.blp  preferences_export_page.blp  preferences_general_page.blp  preferences_interface_page.blp  preferences_window.blp  preferences_window.ui  preview_window.blp  preview_window.ui  rename_popover.blp  shortcuts.blp  shortcuts.ui  sidebar.blp  sidebar_page.blp  stats.blp  stats.ui  welcome_page.blp  window.blp  window.ui
data/ui/subprojects/: blueprint-compiler.wrap
debian/: changelog  control  copyright  rules
flatpak/: blueprint-compiler.json  com.github.tenderowl.norka.Devel.json  com.github.tenderowl.norka.json  python3-htmldocx.json  python3-markdown2.json  python3-modules.json  python3-requests.json
norka/: __init__.py  define.py  document_manager.py  main.py  markup_regex.py  meson.build  meson.build.bak  norka.in  utils.py  window.py
norka/models/: __init__.py  appstate.py  document.py  folder.py  grid_item.py
norka/services/: __init__.py  backup.py  distro.py  export.py  logger.py  markup_formatter.py  medium.py  settings.py  stats_counter.py  stats_handler.py  storage.py  writeas.py
norka/widgets/: about_dialog.py  content_page.py  document_context_menu.py  document_grid.py  document_grid_document_menu.py  document_grid_folder_menu.py  editor.py  editor_column.py  editor_tabs_view.py  editor_view.py  export_dialog.py  extended_stats_dialog.py  folder_create_dialog.py  format_shortcuts_dialog.py  header.py  image_link_popover.py  link_popover.py  menu_export.py  menu_popover.py  message_dialog.py  notes_column.py  notes_list.py  notes_sidebar.py  notes_tree.py  preferences_dialog.py  preferences_export_page.py  preferences_general_page.py  preferences_interface_page.py  preview.py  quick_find_dialog.py  rename_dialog.py  rename_popover.py  search_bar.py  search_dialog.py  sidebar.py  sidebar_page.py  welcome.py  welcome_page.py
norka/writeasapi/: collection.py  posts.py  readwa.py  uri.py  wauser.py  writeas.py
po/: LINGUAS  POTFILES  POTFILES.in  en_GB.po  es_AR.po  fr.po  it.po  meson.build  nl.po  pt.po  ru.po  sv.po  tr.po  update_potfiles.sh
snap/: snapcraft.yaml
snap/gui/: com.github.tenderowl.norka.desktop
src/: define.py  main.py  meson.build  norka.gresource.xml  norka.in  window.py
src/services/: storage.py
src/widgets/: document_grid.py  document_room.py  editor.py  header.py  rename_popover.py  welcome.py
tests/: storage_tests.py
